fix: update execution counts and improve markdown descriptions in analysis

--- a/src.ipynb
+++ b/src.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "82472a08",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "6ceb1863",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "4                   1.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "431d3bc7",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "max              10.000000             10.000000  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "597df17f",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "id": "7c4dfe84",
    "metadata": {},
    "outputs": [
@@ -628,15 +628,22 @@
    "metadata": {},
    "source": [
     "Para auxiliar as análises decidiu-se criar 4 níveis de labels:\n",
-    "1. Pouco ansioso (0), muito ansioso (1) -> pouco ansioso = níveis 1 e 2, muito ansioso = níveis 9 e 10\n",
-    "2. Pouco/médio ansioso (0), médio/muito ansioso (1) -> pouco/médio ansioso = níveis menores ou iguais a 5, médio/muito ansioso = níveis maiores que 5\n",
-    "3. Pouco ansioso (0), ansiedade moderada (1), muito ansioso (2) -> pouco = níveis 1 e 2, moderada = níveis 4 a 6, muito  = níveis 9 e 10\n",
+    "1. Pouco ansioso (0), muito ansioso (1)\n",
+    "   1. Pouco ansioso = níveis 1 e 2\n",
+    "   2. Muito ansioso = níveis 9 e 10\n",
+    "2. Pouco/médio ansioso (0), médio/muito ansioso (1)\n",
+    "   1. Pouco/médio ansioso = níveis menores ou iguais a 5\n",
+    "   2. Médio/muito ansioso = níveis maiores que 5\n",
+    "3. Pouco ansioso (0), ansiedade moderada (1), muito ansioso (2)\n",
+    "   1. Pouco = níveis 1 e 2\n",
+    "   2. Moderada = níveis 4 a 6\n",
+    "   3. Muito  = níveis 9 e 10\n",
     "4. Categorias originais"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "e710932b",
    "metadata": {},
    "outputs": [
@@ -646,7 +653,7 @@
        "(3446, 19)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "id": "0c3d178c",
    "metadata": {},
    "outputs": [
@@ -671,7 +678,7 @@
        "(11000, 19)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "id": "9235a4c6",
    "metadata": {},
    "outputs": [
@@ -696,7 +703,7 @@
        "(8107, 19)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "id": "0ecb25da",
    "metadata": {},
    "outputs": [
@@ -731,7 +738,7 @@
        "(11000, 19)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "id": "637e88ac",
    "metadata": {},
    "outputs": [],
@@ -771,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "64f42490",
    "metadata": {},
    "outputs": [],
@@ -790,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "id": "1958c011",
    "metadata": {},
    "outputs": [
@@ -877,20 +884,21 @@
    "id": "16a050aa",
    "metadata": {},
    "source": [
-    "Os gráficos acima demonstram uma relação evidente entre as features e as labels:\n",
+    "Os gráficos acima demonstram uma relação evidente entre as features e as labels.\n",
     "\n",
-    "1. Níveis elevados de ansiedade se concentram entre 20 e 50 anos.\n",
-    "2. A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias com duração de sono menor que 6 horas.\n",
-    "3. A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias com 2 ou menos horas de atividade física por semana.\n",
-    "4. A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias que consomem mais de 300 mg de cafeína por dia.\n",
-    "5. Baixíssima ocorrência de instâncias com alta ansiedade quando o consumo de álcool por semana é baixo (menor que 5).\n",
-    "6. A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias com frequência cardíaca superior a 90 bpm.\n",
-    "7. A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias com frequência respiratória superior a 20 respirações/min."
+    "A maioria esmagadora dos casos de alta ansiedade se encontra em instâncias com:\n",
+    "1. Idade entre 20 e 50 anos\n",
+    "2. Duração de sono menor que 6 horas\n",
+    "3. 2 ou menos horas de atividade física por semana\n",
+    "4. Consumo de cafeína por dia superior a 300 mg\n",
+    "5. Consumo de álcool superior a 5 drinks por semana\n",
+    "6. Frequência cardíaca superior a 90 bpm\n",
+    "7. Frequência respiratória superior a 20 respirações/min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "id": "c669fdf9",
    "metadata": {},
    "outputs": [
@@ -1043,6 +1051,17 @@
    "metadata": {},
    "source": [
     "Diferente dos gráficos anteriores, a plotagem acima mostra algumas features com baixa ou nenhuma relevância (ou seja, as proporções de ansiedade/não ansiedade para valores diferentes da feature são praticamente idênticas), como: gênero e profissão/ocupação."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1969dbc",
+   "metadata": {},
+   "source": [
+    "Dúvidas\n",
+    "\n",
+    "1. Faz sentido desconsiderar features com base nesses plots?\n",
+    "2. Faz sentido agrupos features (ex.: em vez de dieta variar de 1 a 10, variar de 0 a 2)"
    ]
   }
  ],
