Atualiza README.md com descrição do projeto, metodologia e resultados; remove arquivo espec.ipynb; ajusta conteúdo e formatação no src.ipynb.

--- a/src.ipynb
+++ b/src.ipynb
@@ -19,15 +19,11 @@
     "\n",
     "**Introdução**\n",
     "\n",
-    "A ansiedade social é um transtorno amplamente disseminado, caracterizado por medo intenso e persistente de situações sociais, podendo comprometer significativamente a qualidade de vida dos indivíduos. A compreensão desse fenômeno exige a análise conjunta de fatores demográficos, comportamentais, de estilo de vida e indicadores psicológicos. Nesse contexto, o *Social Anxiety Dataset* reúne mais de 10.000 amostras sintéticas que simulam padrões realistas de indivíduos com diferentes níveis de ansiedade social, oferecendo uma base robusta para estudos em ciência de dados e aprendizado de máquina aplicados à saúde mental.\n",
-    "\n",
-    "**Definição do Problema**\n",
-    "\n",
-    "O problema consiste em analisar e modelar os dados disponíveis com o objetivo de prever o nível de ansiedade social dos indivíduos, representado por uma variável alvo numérica de 1 a 10. Além da predição, busca-se identificar quais fatores comportamentais, psicológicos e de estilo de vida mais contribuem para o aumento ou redução da ansiedade social, apoiando a construção de modelos interpretáveis e a extração de insights relevantes para pesquisas e aplicações educacionais.\n",
+    "A ansiedade social é um transtorno amplamente disseminado, caracterizado por medo intenso e persistente de situações sociais, podendo comprometer significativamente a qualidade de vida dos indivíduos. A compreensão desse fenômeno exige a análise conjunta de fatores comportamentais, de estilo de vida e indicadores psicológicos. Nesse contexto, o *Social Anxiety Dataset* reúne mais de 10.000 amostras sintéticas que simulam padrões realistas de indivíduos com diferentes níveis de ansiedade social, oferecendo uma base robusta para estudos em ciência de dados e aprendizado de máquina aplicados à saúde mental.\n",
     "\n",
     "**Abordagem**\n",
     "\n",
-    "Para analisar os dados, optou-se por atacar o problema como um desafio de classificação, onde a label de uma dada instância é o correspondente nível de ansiedade."
+    "Para analisar os dados, optou-se por atacar o problema como um desafio de classificação, onde a label de uma dada instância é o correspondente nível de ansiedadel, uma variável numérica de 1 a 10."
    ]
   },
   {
@@ -3285,7 +3281,7 @@
    "source": [
     "Os resultados observados mostram que, ao analisar as medidas de desempenho para cada feature, o modelo não performou bem. Contudo, pode-se destacar alguns resultados interessantes:\n",
     "1. Assim como aconteceu em seções anteriores, diminuir a dimensionalidade e remover features de baixa relevância aumentaram a média das medidas de desempenho (reforçando a hipótese da existência de features \"prejudiciais\").\n",
-    "   - Uma possível hipótese para essa sensibilidade é o fato de o modelo se basear em distâncias.\n",
+    "   - Uma possível hipótese para essa sensibilidade é o fato de o modelo se basear puramente em distâncias.\n",
     "2. A maior parte dos erros de predição ocorreu em classes adjacentes. Em outras palavras, para uma instância $x$ com rótulo $y$, as predições incorretas concentraram-se predominantemente no intervalo $[y-2,y+2]$, o que reforça o caráter subjetivo do problema.\n",
     "3. O modelo apresentou dificuldade significativa em identificar instâncias associadas à ansiedade moderada (classes 5 e 6). Possivelmente, por se tratarem de valores de transição, suas features são facilmente confundidas. "
    ]
@@ -3323,8 +3319,8 @@
    "source": [
     "**Principais análises**:\n",
     "1. No geral o RF teve um desempenho significativamente superior aos observados usando KNN. Destaca-se o desempenho para os dados de nível 3 (ansiedade pequena, média e alta), onde o modelo conseguiu distinguir níveis moderados de forma bastante satisfatória.\n",
-    "2. Diferente do observado no KNN, remover features de baixa relevância não trouxe melhoras notáveis.\n",
-    "   - Uma possível razão para isso é o fato de o RF não se basear em distâncias, mas na diminuição da entropia, tornando-o menos sensível a features ruidosas."
+    "2. Diferentemente do observado no KNN, a remoção de features de baixa relevância não resultou em melhorias significativas no desempenho do modelo.\n",
+    "   - Uma possível explicação é que o RF não se baseia em métricas de distância, mas sim na redução progressiva da impureza (como entropia ou índice de Gini) por meio da seleção das melhores features em cada divisão. Isso o torna naturalmente mais robusto à presença de features ruidosas ou pouco informativas."
    ]
   },
   {
@@ -3527,7 +3523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "aa74dff8",
    "metadata": {},
    "outputs": [
